force-app/main/default/objects/Distributor_Geocode_Config__c/Distributor_Geocode_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Google Geocoding API configuration for distributor sellout mapping.</description>
    <label>Distributor Geocode Config</label>
</CustomObject>