force-app/main/default/objects/Distributor_Geocode_Config__c/fields/Auto_Confirm_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Auto_Confirm_Threshold__c</fullName>
    <label>Auto Confirm Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>