force-app/main/default/objects/Distributor_Geocode_Config__c/fields/Daily_Quota__c.field-meta.xml
<CustomField>
    <fullName>Daily_Quota__c</fullName>
    <label>Daily Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>