force-app/main/default/objects/Distributor_Geocode_Config__c/fields/Google_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_API_Key__c</fullName>
    <label>Google API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>