force-app/main/default/objects/Distributor_Geocode_Config__c/fields/Proximity_Meters__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Meters__c</fullName>
    <label>Proximity Meters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>